test frontend pipeline

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -53,6 +53,9 @@ pipeline {
         GITHUB_REPO           = "liav-hasson/quiz-app-frontend"
         GITHUB_REPO_URL       = "https://github.com/${GITHUB_REPO}.git"
         
+        // GitOps repository (Helm charts)
+        GITOPS_REPO_URL       = "https://github.com/liav-hasson/quiz-app-gitops.git"
+        
         // Git configuration for commits
         GIT_USER_NAME         = "Jenkins Pipeline"
         GIT_USER_EMAIL        = "jenkins@weatherlabs.org"
@@ -74,16 +77,13 @@ pipeline {
                     echo '--------- Preparing image version ---------'
                     checkout scm
 
-                    // Default: use existing date-based BUILD_TAG
-                    env.IMAGE_TAG = env.BUILD_TAG
-
-                    // Compute semantic version and set env for the rest of pipeline
                     def semver = sh(returnStdout: true, script: './scripts/compute_next_version.sh . auto').trim()
                     if (semver) {
                         echo "Computed semantic version: ${semver}"
                         env.IMAGE_TAG = semver
                     } else {
-                        echo "No semantic version computed; falling back to date-based tag: ${env.IMAGE_TAG}"
+                        echo "No semantic version computed; falling back to date-based tag: ${env.BUILD_TAG}"
+                        env.IMAGE_TAG = env.BUILD_TAG
                     }
                 }
             }
@@ -196,27 +196,20 @@ pipeline {
             steps {
                 echo '--------- Updating GitOps Repository ---------'
                 script {
-                    // Configure git credentials securely using credential helper
                     withCredentials([usernamePassword(credentialsId: 'github-credentials', 
                                                       usernameVariable: 'GIT_USERNAME', 
                                                       passwordVariable: 'GIT_PASSWORD')]) {
                         sh '''
-                            # Configure git credential helper for this session
-                            git config --global credential.helper store
-                            echo "https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com" > ~/.git-credentials
-                            
                             ./scripts/update-gitops.sh \
                                 "${DOCKERHUB_CREDENTIALS_USR}" \
                                 "${DOCKER_IMAGE_NAME}" \
                                 "${IMAGE_TAG}" \
                                 "${BUILD_NUMBER}" \
-                                "${GITHUB_REPO_URL}" \
+                                "${GITOPS_REPO_URL}" \
                                 "${GIT_USER_NAME}" \
-                                "${GIT_USER_EMAIL}"
-                            
-                            # Clean up credentials
-                            rm -f ~/.git-credentials
-                            git config --global --unset credential.helper
+                                "${GIT_USER_EMAIL}" \
+                                "${GIT_USERNAME}" \
+                                "${GIT_PASSWORD}"
                         '''
                     }
                 }
