--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "lucide-react": "^0.553.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -16,8 +19,12 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.22",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "postcss": "^8.5.6",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^5.0.0"
   }
 }
