fixing image versioning

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -82,16 +82,16 @@ pipeline {
                     checkout scm
 
                     // Determine deployment environment based on branch
-                    // Try multiple sources for branch name
-                    def branchName = env.BRANCH_NAME ?: env.GIT_BRANCH ?: 'unknown'
+                    def branchName = env.BRANCH_NAME ?: env.GIT_BRANCH ?: ''
                     echo "Detected branch: ${branchName}"
                     
-                    if (branchName == 'main' || branchName == 'origin/main' || branchName == 'refs/heads/main') {
+                    // Only deploy to prod if on main branch (handle origin/main and main)
+                    if (branchName == 'main' || branchName == 'origin/main') {
                         env.DEPLOY_ENV = 'prod'
                         echo "Branch: ${branchName} → Deploying to PRODUCTION"
                     } else {
                         env.DEPLOY_ENV = 'dev'
-                        echo "Branch: ${branchName} → Deploying to DEVELOPMENT"
+                        echo "Branch: ${branchName ?: 'unknown'} → Deploying to DEVELOPMENT"
                     }
 
                     def semver = sh(returnStdout: true, script: './scripts/compute_next_version.sh . auto').trim()
@@ -255,6 +255,53 @@ pipeline {
                         env.PIPELINE_STATUS = "FAILURE"
                     }
                     echo "❌ Failed to update GitOps repository"
+                }
+            }
+        }
+
+        stage('Tag Application Release') {
+            when {
+                expression { env.DEPLOY_ENV == 'prod' }
+            }
+            steps {
+                echo '--------- Tagging Application Release ---------'
+                script {
+                    withCredentials([usernamePassword(credentialsId: 'github-credentials',
+                                                      usernameVariable: 'GIT_USERNAME',
+                                                      passwordVariable: 'GIT_PASSWORD')]) {
+                        sh '''
+                            # Configure git
+                            git config user.name "${GIT_USER_NAME}"
+                            git config user.email "${GIT_USER_EMAIL}"
+                            
+                            # Create annotated tag
+                            git tag -a "${IMAGE_TAG}" -m "Release ${IMAGE_TAG} - Build #${BUILD_NUMBER}" || {
+                                echo "Tag ${IMAGE_TAG} already exists locally"
+                            }
+                            
+                            # Build authenticated URL
+                            REPO_PATH=$(echo "${GITHUB_REPO_URL}" | sed 's|https://||')
+                            AUTHENTICATED_URL="https://${GIT_USERNAME}:${GIT_PASSWORD}@${REPO_PATH}"
+                            
+                            # Push tag to remote
+                            git push "${AUTHENTICATED_URL}" "${IMAGE_TAG}" || {
+                                echo "Tag ${IMAGE_TAG} already exists on remote"
+                            }
+                            
+                            echo "Tagged application repo with ${IMAGE_TAG}"
+                        '''
+                    }
+                }
+            }
+            post {
+                success {
+                    echo "✅ Application tagged with version ${env.IMAGE_TAG}"
+                }
+                failure {
+                    script {
+                        env.PIPELINE_STATUS = "FAILURE"
+                    }
+                    echo "❌ Failed to tag application release"
                 }
             }
         }
