--- a/react-app/package.json
+++ b/react-app/package.json
@@ -17,7 +17,8 @@
     "lucide-react": "^0.553.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
