--- a/react-app/package.json
+++ b/react-app/package.json
@@ -13,11 +13,13 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@reduxjs/toolkit": "^2.10.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
@@ -30,6 +32,6 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "tailwindcss-animate": "^1.0.7",
-    "vite": "^5.0.0"
+    "vite": "^7.2.2"
   }
 }
