--- a/react-app/package.json
+++ b/react-app/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "recharts": "^3.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
