--- a/react-app/nginx.conf
+++ b/react-app/nginx.conf
@@ -45,6 +45,25 @@ server {
         proxy_read_timeout 60s;
     }
 
+    # WebSocket/Multiplayer - proxy to multiplayer backend
+    # Uses environment variable MULTIPLAYER_URL (set at runtime)
+    location /socket.io/ {
+        proxy_pass http://${MULTIPLAYER_URL};
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        
+        # WebSocket timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
     # Health check endpoint
     location /health {
         access_log off;
