--- a/ci/app-dockerfile/Dockerfile
+++ b/ci/app-dockerfile/Dockerfile
@@ -1,12 +1,6 @@
 # Build stage
 FROM node:20-alpine AS build
 
-# Accept build argument for Google Client ID
-ARG VITE_GOOGLE_CLIENT_ID
-
-# Set as environment variable for Vite build
-ENV VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
-
 WORKDIR /app
 
 # Copy package files
@@ -15,10 +9,10 @@ COPY package*.json ./
 # Install dependencies
 RUN npm ci
 
-# Copy source files
+# Copy source files (includes .env with VITE_* variables)
 COPY . .
 
-# Build the app (Vite will embed VITE_* env vars)
+# Build the app (Vite embeds VITE_* env vars at build time)
 RUN npm run build
 
 # Production stage
