--- a/react-app/package.json
+++ b/react-app/package.json
@@ -28,6 +28,8 @@
     "react-router-dom": "^6.20.0",
     "recharts": "^3.5.0",
     "socket.io-client": "^4.8.1",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "three": "^0.181.2"
   },
   "devDependencies": {
